--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2679,21 +2679,18 @@ input[type="checkbox"] {
 }
 
 .custom-service-list {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
+  margin: 0 auto;
+  max-width: 1000px;
+  text-align: left;
+  list-style-position: outside;
+  padding-left: 1.5em;
   font-size: 1em;
   line-height: 1.6;
-  text-align: left;
-  padding-left: 1.5em;
-  max-width: 100%;
+  white-space: nowrap;
+  overflow-x: auto;
 }
 
-@media screen and (min-width: 961px) {
-  .custom-service-list li {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+.custom-service-list li {
+margin-bottom: 0.75em;
 }
 
