--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2678,19 +2678,31 @@ input[type="checkbox"] {
   cursor: pointer;
 }
 
+.centered-content {
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: left;
+}
+
 .custom-service-list {
-	max-width: 1000px;
-	margin: 0 auto;		/* Zentriert den gesamten Block */
-	padding-left: 2em;
+	/*max-width: 1000px;
+	/*margin: 0 auto;		/* Zentriert den gesamten Block */
 	list-style: disc;
-	text-align: left;       /* Wichtig: sorgt für linksbündigen Text */
+  	list-style-position: outside;
+	padding-left: 1.5em;
+	line-height: 1.6;
+	/*list-style: disc;
+	/*text-align: left;       /* Wichtig: sorgt für linksbündigen Text */
 }
 
 .custom-service-list li {
+	text-indent: -0.5em;
+  	margin-bottom: 1em;
+	/*
 	list-style-position: outside;
 	margin-bottom: 1em;
 	padding-left: 0.5em;
 	text-indent: -0.5em; /* hängt Umbrüche korrekt unter den Text, nicht unter das Bullet*/
-	line-height: 1.6;
+	/*line-height: 1.6;*/
 }
 
