--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2678,31 +2678,22 @@ input[type="checkbox"] {
   cursor: pointer;
 }
 
-.centered-content {
+
+/* ----- der kram für die aufzählungen ----- */
+.custom-service-list {
   max-width: 900px;
   margin: 0 auto;
   text-align: left;
 }
 
-.custom-service-list {
-	/*max-width: 1000px;
-	/*margin: 0 auto;		/* Zentriert den gesamten Block */
-	list-style: disc;
-  	list-style-position: outside;
-	padding-left: 1.5em;
-	line-height: 1.6;
-	/*list-style: disc;
-	/*text-align: left;       /* Wichtig: sorgt für linksbündigen Text */
+.clean-list {
+  list-style-type: disc;
+  padding-left: 1.5em;
+  margin: 0;
 }
 
-.custom-service-list li {
-	text-indent: -0.5em;
-  	margin-bottom: 1em;
-	/*
-	list-style-position: outside;
-	margin-bottom: 1em;
-	padding-left: 0.5em;
-	text-indent: -0.5em; /* hängt Umbrüche korrekt unter den Text, nicht unter das Bullet*/
-	/*line-height: 1.6;*/
+.clean-list li {
+  margin-bottom: 1em;
+  line-height: 1.6;
+  text-align: left;
 }
-
